make compatible with current triqs, cross fingers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,12 @@ repository = "https://github.com/vasp-dev/py4vasp"
 # this restriction, which will hopefully be released in a future release there
 #python = ">=3.8"
 python = ">=3.8,<4"
-numpy = ">=1.23.0"
-h5py = ">=3.7.0"
-pandas = ">=1.4.3"
+#numpy = ">=1.23.0"
+#h5py = ">=3.7.0"
+#pandas = ">=1.4.3"
+numpy = ">=1.21.6"
+h5py = ">=3.6.0"
+pandas = ">=1.4.2"
 nglview = ">=3.0.3"
 ase = ">=3.22.1"
 #mdtraj = ">=1.9.6"
